Production-ready overhaul: security, performance, UI polish, and deployment
- Remove all hardcoded API keys/credentials, migrate to env vars across 8+ files
- Fix JWT validation in office-service (use Spring Security instead of insecure JWT.decode)
- Fix CORS wildcard in map service (configurable allowed origins)
- Fix all frontend build errors and TypeScript issues for React 19 / Next.js 15
- Upgrade @hello-pangea/dnd to v18, remove unused/conflicting dependencies
- Consolidate tailwind config, add full shadcn/ui theme tokens
- Create missing UI components (Avatar, Skeleton)
- Dynamic-import ZegoCloud SDK (meeting page: 1.87MB -> 145KB first-load JS)
- Rewrite frontend Dockerfile as multi-stage production build (standalone output)
- Update Gemini API calls from deprecated models to gemini-2.0-flash
- Cache BERT model at startup in RAG service, add upload limits and health endpoint
- Fix React rules-of-hooks violation in meeting page
- Polish landing page (working nav links), about page (professional bios, theme-aware)
- Fix overflow:hidden on body, update metadata description
- Remove debug console.log statements, delete stale duplicate files
- Add HOW_TO_RUN.md with full setup and architecture guide

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>